--- a/css/skill.css
+++ b/css/skill.css
@@ -7,7 +7,7 @@ body {
 .skills {
   width: 80%;
   max-width: 890px;
-  height: 688px;
+  height: 593px;
   margin: auto;
   position: relative;
 }
@@ -21,7 +21,7 @@ body {
   height: inherit;
   width: 2px;
   position: absolute;
-  background: rgba(238, 238, 238, 0.6);
+  background: #cccccc;
 }
 .line.l--0 {
   left: 0;
@@ -62,7 +62,7 @@ body {
 }
 
 .chart:not(:first-child) {
-  margin-top: 10px;
+  margin-top: 0px;
 }
 
 .chart__title {
@@ -82,11 +82,18 @@ body {
 .chart--horiz {
   overflow: hidden;
 }
-
+div.chart--dev .chart__bar {
+  background: #ff6b6b;
+}
+div.chart--prod .chart__bar {
+  background: #1abc9c;
+}
+div.chart--design .chart__bar {
+  background: #3498db;
+}
 .chart__bar {
-  height: 30px;
+  height: 25px;
   margin-bottom: 10px;
-  background: linear-gradient(to left, #4cb8c4, #3cd3ad);
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   opacity: 0;
