--- a/css/about.css
+++ b/css/about.css
@@ -1,28 +1,25 @@
 section#about {
   
-  height: 100%;
   box-sizing: border-box;
+  background-color: beige;
+  height: 500px;
 }
 section#about div.wrap {
   
-  height: 100%;
+  height: 500px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   box-sizing: border-box;
-  background-color: #2B4D8F;
 }
 section#about div.wrap div.note {
-
   display: flex;
-  width: 890px;
-  justify-content: center;
+  justify-content: space-around;
   margin: 0 auto;
-  padding: 70px;
   box-sizing: border-box;
-  height: 716px;
+  height: 500px;
   gap: 50px;
-  background-color: #F5FF9B;
+  background-color: transparent;
   align-items: center;
   border-radius: 50px;
 }
@@ -31,63 +28,68 @@ section#about div.wrap div.note h2.hide {
 }
 section#about div.wrap div.note figure {
   
-  height: 450px;
+  height: 392px;
   padding: 20px 20px 0 20px;
   background-color: white;
   box-sizing: border-box;
   border-radius: 10px;
+  width: 300px;
 }
 section#about div.wrap div.note figure img {
   
-  width: 350px;
-  height: 350px;
+  width: 261px;
+  height: 295px;
 }
 section#about div.wrap div.note figure img figcaption {
   
 }
-section#about div.wrap div.note div.introduce {
+section#about div.wrap div.note div.profile {
   
-  height: 450px;
-  width: 50%;
+  height: 320px;
+  width: 35%;
 }
-section#about div.wrap div.note div.introduce>div {
+section#about div.wrap div.note div.profile>div {
   
   display: flex;
   gap: 12px;
 }
-section#about div.wrap div.note div.introduce h3 {
+section#about div.wrap div.note div.profile h3 {
   
   margin-bottom: 30px;
 }
-section#about div.wrap div.note div.introduce p {
+section#about div.wrap div.note div.profile p {
   
-  font-size: 25px;
+  font-size: 18px;
   line-height: 1.4;
 }
-section#about div.wrap div.note div.introduce p span {
+section#about div.wrap div.note div.profile p span {
   
   margin-right: 15px;
 }
-section#about div.wrap div.note div.introduce h4 {
+section#about div.wrap div.note div.profile h4 {
 
-  font-size: 25px;
+  font-size: 18px;
   line-height: 1.4;
+  font-weight: 700;
 }
-section#about div.wrap div.note div.introduce ul {
+section#about div.wrap div.note div.profile ul.career {
   
   display: flex;
   flex-direction: column;
   row-gap: 5px;
   line-height: 1.1;
 }
-section#about div.wrap div.note div.introduce p{
+section#about div.wrap div.note div.profile ul.career li{
   
+  font-size: 18px;
 }
-section#about div.wrap div.note div.introduce ul li {
-  
-  font-size: 16px;
+section#about div.wrap div.note ul.introduction{
+  height: 220px;
+  margin-top: 60px;
+  width: 35%;
 }
-section#about div.wrap div.note div.introduce ul li span.block{
+section#about div.wrap div.note ul.introduction li{
   
-  font-size: 14px;
+  font-size: 18px;
+  line-height: 1.2;
 }
