--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,146 +1,86 @@
-div.wrapall{
+section#portfolio {
   
-  padding-top: 150px;
+  background-color: #FFFFF0;
 }
-div.wrap{
-  padding-top: 150px; 
+section#portfolio div.wrap {
+  
+  padding: 80px;
 }
-.gallery {
-    position: relative;
-    overflow: hidden;
-    height: auto;
+section#portfolio div.wrap h2 {
+  
+  text-align: center;
+  margin-bottom: 50px;
 }
-.gallery ul {
-    padding-top: 50px;
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+section#portfolio div.wrap ul.pfani {
+  
 }
-.gallery ul li {
-    /*! margin-bottom: 20px; */
-    width: calc(100% / 3 - 40px / 3);
-    position: relative;
-    /*! width: 100%; */
-    background-color: #E0E0E2;
-    border-radius: 10px;
-}
-.gallery ul li a {
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 15px;
-    line-height: 0;
-    display: flex;
-    box-sizing: border-box;
-}
-.gallery ul li a::after{
-  content: "";  
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+section#portfolio div.wrap ul.pfani li.pf {
+  
+  padding: 50px;
+  box-sizing: border-box;
+  background-color: #F0FFFF;
   border-radius: 10px;
-  background-color: rgba(3,3,3,0.2);
-  z-index: -1;
 }
-.gallery ul li a:hover:after {
-    opacity: 1;
+section#portfolio div.wrap ul.pfani li h3 {
+  
+  margin-bottom: 30px;
+  display: flex;
+  gap: 5px;
+  font-size: 30px;
 }
-.gallery img {
-    max-width: 100%;
-    height: auto;
-    padding: 0;
-    margin: 0;
+section#portfolio div.wrap ul.pfani li h3::before{
+  content: "";
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/maca.png);
+  background-size: contain;
 }
-.close {
-  width: 21px;
-  height: 21px;
-  background: url(data:image/svg+xml;utf8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3C%21--%20Generator%3A%20Adobe%20Illustrator%2017.1.0%2C%20SVG%20Export%20Plug-In%20.%20SVG%20Version%3A%206.00%20Build%200%29%20%20--%3E%0A%3C%21DOCTYPE%20svg%20PUBLIC%20%22-//W3C//DTD%20SVG%201.1//EN%22%20%22http%3A//www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd%22%3E%0A%3Csvg%20version%3D%221.1%22%0A%09%20id%3D%22svg2%22%20xmlns%3Adc%3D%22http%3A//purl.org/dc/elements/1.1/%22%20xmlns%3Acc%3D%22http%3A//creativecommons.org/ns%23%22%20xmlns%3Ardf%3D%22http%3A//www.w3.org/1999/02/22-rdf-syntax-ns%23%22%20xmlns%3Asvg%3D%22http%3A//www.w3.org/2000/svg%22%0A%09%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20x%3D%220px%22%20y%3D%220px%22%20viewBox%3D%220%200%2021%2021%22%0A%09%20enable-background%3D%22new%200%200%2021%2021%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cg%20id%3D%22layer1%22%20transform%3D%22translate%280%2C-1031.3622%29%22%3E%0A%09%3Cpath%20id%3D%22path2987%22%20fill%3D%22none%22%20stroke%3D%22%23000000%22%20d%3D%22M0%2C1031.4l21%2C21%22/%3E%0A%09%3Cpath%20id%3D%22path2989%22%20fill%3D%22none%22%20stroke%3D%22%23000000%22%20d%3D%22M21%2C1031.4l-21%2C21%22/%3E%0A%3C/g%3E%0A%3C/svg%3E%0A%0A) no-repeat;
-  position: absolute;
-  right: 10px;
-  top: -200px;
-  opacity: 1;
-  z-index: 1004;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
+section#portfolio div.wrap ul.pfani li div.contents {
+  
+  display: flex;
+  gap: 50px;
 }
-.item_open .close {
-    opacity: 1;
-    top: 0px;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-.port {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    padding-top: 100px;
-    background: #ffffff;
-    background-color: #fafafa;
-    z-index: 103;
-    visibility: hidden;
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
-    border-bottom: 1px solid #d0d0d0;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-  }
-  .port img {
-    width: 50%;
-  }
-  .port .description {
-    float: left;
-    width: 50%;
-    max-height: 100%;
-    padding: 0 40px 40px;
-    overflow: auto;
-    box-sizing: border-box;
-  }
-  .port h3 {
-    font-size: 35px;
-    line-height: 2.3;
-    padding: 0;
-  }
-  .port > * {
-    opacity: 0;
-    -webkit-transition: all 0.5s linear;
-    -moz-transition: all 0.5s linear;
-    transition: all 0.5s linear;
-  }
-  .port.item_open {
-    visibility: visible;
-    -webkit-transform: translateY(0%);
-    transform: translateY(0%);
-    -webkit-transition: all 0.4s ease-in-out;
-    -moz-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-  }
-  .port > * {
-    opacity: 1;
-    -webkit-transition-delay: 0.5s;
-    transition-delay: 0.5s;
-  }
-.row {
-  width: 100%;
-  max-width: 890px;
-  margin: 0 auto;
-  clear: both;
-  position: relative;
-}
-.row img {
-  max-width: 100%;
-  height: auto;
-  padding: 0;
-  margin: 0;
+section#portfolio div.wrap ul.pfani li div.contents img {
+  
+  width: 65%;
   border: 2px solid;
+  border-radius: 20px;
+}
+section#portfolio div.wrap ul.pfani li div.contents div.explane {
+  
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  line-height: 1.2;
+  width: 35%;
+  justify-content: center;
+}
+section#portfolio div.wrap ul.pfani li div.contents div.explane h4 {
+  
+}
+section#portfolio div.wrap ul.pfani li div.contents div.explane p.p {
+  
+  font-size: 20px;
+}
+section#portfolio div.wrap ul.pfani li div.contents div.explane span {
+  
+}
+section#portfolio div.wrap ul.pfani li div.contents div.explane a.more{
+  
+  margin: 65px 0 0 0;
   border-radius: 5px;
+}
+section#portfolio div.wrap ul.pfani li div.contents div.explane a.more:hover{
+  
+  background-color: #432314;
+  color: #FFFFF0;
+  border: none;
+}
+#portfolio .slick-dots li button{
+  
+  font-size: 50px;
+}
+#portfolio .slick-dots li button::before{
+  
+  font-size: 50px;
 }
