--- a/css/skill.css
+++ b/css/skill.css
@@ -1,169 +1,104 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-body {
-  font-family: "Open Sans", sans-serif;
-  color: #282828;
+section#skill {
+  
+  background-color: #6F4E37;
 }
-
-.skills {
-  width: 80%;
-  max-width: 890px;
-  height: 593px;
-  margin: auto;
-  position: relative;
+section#skill div.wrap {
+  padding: 50px 0;
 }
-
-.lines {
-  height: 100%;
-  position: relative;
+section#skill div.wrap h2.hide {
+  
 }
-
-.line {
-  height: inherit;
-  width: 2px;
-  position: absolute;
-  background: #cccccc;
-}
-.line.l--0 {
-  left: 0;
-}
-.line.l--25 {
-  left: 25%;
-}
-.line.l--50 {
-  left: 50%;
-}
-.line.l--75 {
-  left: 75%;
-}
-.line.l--100 {
-  left: calc(100% - 1px);
-}
-
-.line__label {
-  display: block;
-  width: 100px;
+section#skill div.wrap h3 {
   text-align: center;
-  position: absolute;
-  bottom: -30px;
-  right: -50px;
+  margin-bottom: 50px;
+  color: #ffffff;
 }
-.line__label.title {
-  text-transform: uppercase;
-  font-weight: bold;
+section#skill div.wrap div.contents {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  flex-wrap: wrap;
+  background-color: #F5DEB3;
+  padding: 30px;
+  border-radius: 20px;
 }
-
-.charts {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
+section#skill div.wrap div.contents h4 {
+  margin-bottom: 20px;
 }
-
-.chart:not(:first-child) {
-  margin-top: 0px;
+section#skill div.wrap div.contents ul {
+  display: flex;
+  gap: 20px;
 }
-
-.chart__title {
+section#skill div.wrap div.contents ul li {
+  
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+section#skill div.wrap div.contents ul li::before{
+  content: "";
+  width: 80px;
+  height: 80px;
   display: block;
-  margin: 0 0 10px;
-  font-weight: bold;
-  opacity: 0;
-  animation: 1s anim-lightspeed-in ease forwards;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-.chart--prod .chart__title {
-  animation-delay: 3.3s;
+section#skill div.wrap div.contents ul.development {
+  
 }
-.chart--design .chart__title {
-  animation-delay: 4.5s;
+section#skill div.wrap div.contents ul.development li {
+  
 }
-
-.chart--horiz {
-  overflow: hidden;
+section#skill div.wrap div.contents ul.development li:nth-child(1)::before{
+  background-image: url(../img/html5.svg);
 }
-div.chart--dev .chart__bar {
-  background: #ff6b6b;
+section#skill div.wrap div.contents ul.development li:nth-child(2)::before{
+  background-image: url(../img/css3.svg);
 }
-div.chart--prod .chart__bar {
-  background: #1abc9c;
+section#skill div.wrap div.contents ul.development li:nth-child(3)::before{
+  background-image: url(../img/sass.svg);
 }
-div.chart--design .chart__bar {
-  background: #3498db;
+section#skill div.wrap div.contents ul.development li:nth-child(4)::before{
+  background-image: url(../img/javaScript.svg);
 }
-.chart__bar {
-  height: 25px;
-  margin-bottom: 10px;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  opacity: 0;
-  animation: 1s anim-lightspeed-in ease forwards;
+section#skill div.wrap div.contents ul.development li:nth-child(5)::before{
+  background-image: url(../img/jquery.svg);
 }
-.chart--dev .chart__bar:nth-of-type(11) {
-  animation-delay: 2.7s;
+section#skill div.wrap div.contents ul.development li:nth-child(6)::before{
+  background-image: url(../img/bootstrap.svg);
 }
-.chart--dev .chart__bar:nth-of-type(10) {
-  animation-delay: 2.5s;
+section#skill div.wrap div.contents ul.development li:nth-child(7)::before{
+  background-image: url(../img/html5.svg);
 }
-.chart--dev .chart__bar:nth-of-type(9) {
-  animation-delay: 2.3s;
+section#skill div.wrap div.contents ul.development li:nth-child(8)::before,section#skill div.wrap div.contents ul.development li:nth-child(9)::before,section#skill div.wrap div.contents ul.development li:nth-child(10)::before,section#skill div.wrap div.contents ul.development li:nth-child(11)::before{
+  background-image: url(../img/coffee.png);
 }
-.chart--dev .chart__bar:nth-of-type(8) {
-  animation-delay: 2.1s;
+section#skill div.wrap div.contents div.productivity {
 }
-.chart--dev .chart__bar:nth-of-type(7) {
-  animation-delay: 1.9s;
+section#skill div.wrap div.contents ul.productivity {
 }
-.chart--dev .chart__bar:nth-of-type(6) {
-  animation-delay: 1.7s;
+section#skill div.wrap div.contents ul.productivity li {
+  
 }
-.chart--dev .chart__bar:nth-of-type(5) {
-  animation-delay: 1.5s;
+section#skill div.wrap div.contents ul.productivity li:nth-child(1)::before {
+  background-image: url(../img/github.svg);
 }
-.chart--dev .chart__bar:nth-of-type(4) {
-  animation-delay: 1.3s;
+section#skill div.wrap div.contents ul.productivity li:nth-child(2)::before {
+  background-image: url(../img/mso.svg);
 }
-.chart--dev .chart__bar:nth-of-type(3) {
-  animation-delay: 1.1s;
+section#skill div.wrap div.contents div.design {
 }
-.chart--dev .chart__bar:nth-of-type(2) {
-  animation-delay: 0.9s;
+section#skill div.wrap div.contents ul.design {
 }
-.chart--dev .chart__bar:nth-of-type(1) {
-  animation-delay: 0.7s;
+section#skill div.wrap div.contents ul.design li:nth-child(1)::before {
+  background-image: url(../img/photoshop.svg);
 }
-.chart--prod .chart__bar:nth-of-type(2) {
-  animation-delay: 4.2s;
+section#skill div.wrap div.contents ul.design li:nth-child(2)::before {
+  background-image: url(../img/Illustrator.svg);
 }
-.chart--prod .chart__bar:nth-of-type(1) {
-  animation-delay: 4s;
-}
-.chart--design .chart__bar:nth-of-type(4) {
-  animation-delay: 5.8s;
-}
-.chart--design .chart__bar:nth-of-type(3) {
-  animation-delay: 5.6s;
-}
-.chart--design .chart__bar:nth-of-type(2) {
-  animation-delay: 5.4s;
-}
-.chart--design .chart__bar:nth-of-type(1) {
-  animation-delay: 5.2s;
-}
-
-.chart__label {
-  padding-left: 10px;
-  line-height: 30px;
-  color: white;
-}
-
-@keyframes anim-lightspeed-in {
-  0% {
-    transform: translateX(-200%);
-    opacity: 1;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
+section#skill div.wrap div.contents ul.design li:nth-child(3)::before {
+  background-image: url(../img/coffee.png);
 }
