--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -61,6 +61,7 @@ section#portfolio div.wrap ul.pfani li div.contents div.explane h4 {
 section#portfolio div.wrap ul.pfani li div.contents div.explane p.p {
   
   font-size: 20px;
+  margin-bottom: 15px;
 }
 section#portfolio div.wrap ul.pfani li div.contents div.explane span {
   
