--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 section#contact {
   
-  height: 420px;
-  background-color: #999;
+  height: 390px;
+  background-color: #1E2425;
 }
 section#contact div.wrap {
   
@@ -11,6 +11,8 @@ section#contact div.wrap {
   gap: 40px;
   line-height: 1.2;
   align-items: center;
+  padding: 80px 0;
+  color: #F5CA7B;
 }
 section#contact div.wrap h2 {
   
@@ -24,6 +26,8 @@ section#contact div.wrap ul li {
 }
 section#contact div.wrap ul li p {
   
+  font-size: 30px;
+  line-height: 1.5;
 }
 section#contact div.wrap ul li p span {
   margin-right: 30px;
@@ -34,4 +38,5 @@ section#contact div.wrap > span {
   
   width: 100%;
   text-align: center;
+  font-size: 23px;
 }
